kubernetes-050/02-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-service
spec:
  selector:
    app: hello
  ports:
  # Default port used by the image
  - port: 5678
