kubernetes-050/08-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sup-service
spec:
  selector:
    app: sup
  ports:
  # Default port used by the image
  - port: 5678
    targetPort: 5678
